--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,6 +28,7 @@ header .logo {
   flex: 1;
   display: flex;
   align-items: center;
+  text-transform: uppercase;
 }
 
 header .logo img {
@@ -39,7 +40,7 @@ header nav ul {
 }
 
 nav li {
-  padding-left: 3.5rem;
+  padding-left: 1rem;
 }
 
 nav a {
