--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,9 @@ html {
   color: #4a4a4a;
 }
 
+.main-content {
+
+}
 .container {
   padding: 2rem 1.5rem;
   display: flex;
@@ -19,6 +22,45 @@ html {
 
 }
 .container-image img {      /*Figure out how to get image to span the whole 60%*/
+  max-width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container h1 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.container h3 {
+  font-size: 1rem;
+}
+
+.container p {
+  font-size: 0.85rem;
+}
+
+.features {
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  max-height: 100%;
+}
+
+.feature {
+  display: flex;
+
+}
+
+.feature
+.feature-photo {
+  width: 35%;
+  height: auto;
+  padding-right: 1rem;
+}
+
+.feature-photo img {
   max-width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -133,18 +175,10 @@ header .mobile {
 .banner-text {
   width: 30%;
 }
-.banner-text h1 {
-  font-size: 2rem;
-  font-weight: bold;
-}
 
-.banner-text h3 {
-  font-size: 1rem;
+.banner h3 {
   padding: 2rem 0;
-}
 
-.banner-text p {
-  font-size: 0.85rem;
 }
 
 .banner .button {
@@ -154,3 +188,16 @@ header .mobile {
   padding: 0.5rem 0;
 display: flex;
 justify-content: center;
+}
+
+/* Information */
+
+.information {
+  border: 1px solid red;
+  position: relative;
+  top: 4rem;
+}
+
+.caption {
+
+}
