--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -50,7 +50,8 @@ html {
 
 .feature {
   display: flex;
-
+  align-items: center;
+  padding: 1rem;
 }
 
 .feature
@@ -195,7 +196,13 @@ justify-content: center;
 .information {
   border: 1px solid red;
   position: relative;
-  top: 4rem;
+  top: 4rem;  /*Figure out how to line up sections without needing this */
+}
+
+.information h1 {
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+
 }
 
 .caption {
