--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,11 @@
 html {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
   color: #4a4a4a;
 }
 
 .main-content {
+  line-height: 1.6;
 
 }
 .container {
@@ -28,7 +29,8 @@ html {
 }
 
 .container h1 {
-  font-size: 2rem;
+  font-size: 2.35rem;
+  line-height: 1.2;
   font-weight: bold;
 }
 
@@ -177,13 +179,15 @@ header .mobile {
   background-color: lightgray;
 }
 
+.banner .container {
+  align-items: center;
+}
 .banner-text {
-  width: 30%;
+  width: 35%;
 }
 
 .banner h3 {
   padding: 2rem 0;
-
 }
 
 .banner .button {
@@ -206,7 +210,6 @@ justify-content: center;
 .information h1 {
   margin-top: 2rem;
   margin-bottom: 1.5rem;
-
 }
 
 .caption {
