Adjust font styling for .information. feature elements

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,14 +36,14 @@ html {
 
 .container h3 {
   font-size: 1rem;
+  font-weight: bold;
 }
 
-.container p {
-  font-size: 0.85rem;
+.container h4, p {
+  font-size: 0.65rem;
 }
 
 .features {
-  border: 1px solid blue;
   display: flex;
   flex-direction: column;
   width: 40%;
@@ -56,7 +56,6 @@ html {
   padding: 1rem;
 }
 
-.feature
 .feature-photo {
   width: 35%;
   height: auto;
@@ -69,8 +68,16 @@ html {
   background-size: cover;
 }
 
+.feature-info {
+  width: 65%;
+}
+
 .feature h4 {
   padding: 0.5rem 0;
+}
+
+.feature .more {
+  color: blue;
 }
 /* Header */
 
@@ -202,7 +209,6 @@ justify-content: center;
 /* Information */
 
 .information {
-  border: 1px solid red;
   position: relative;
   top: 4rem;  /*Figure out how to line up sections without needing this */
 }
