--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,21 +11,23 @@ html {
 .container {
   padding: 2rem 1.5rem;
   display: flex;
-  /*align-items: center;*/
   justify-content: flex-start;
   max-width: 60rem;
   margin: 0 auto;
 }
 
-.container-image {
+.container-media {
   width: 60%;
 }
-.container-image img {      /*Figure out how to get image to span the whole 60%*/
+.container-media img {
   max-width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+.container-media video {
+  height: auto;
+}
 .container h1 {
   font-size: 2.35rem;
   line-height: 1.2;
@@ -302,4 +304,24 @@ justify-content: center;
   padding: 2rem 0;
 }
 
-/*Fix video width to match .container-image width"
+
+/* Footer */
+
+footer {
+  border-top: 1px solid #d9d9d9;
+  position: relative;
+  top: 4rem;
+}
+
+footer .content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  font-size: 0.65rem;
+}
+
+footer ul li {
+  display: inline;
+  padding-left: 0.85rem;
+}
