--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 /* Universal Styles */
 
 html {
-  font-family: "Montserrat", sans-serif;
+  font-family: "M PLUS rounded 1c", "Montserrat", sans-serif;
   font-size: 16px;
   color: #383140;
 }
