--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 .container {
-  padding: 2rem 1.5rem;
+  padding: 2rem 0;
   display: flex;
   justify-content: flex-start;
   /*max-width: 60rem;*/
@@ -23,7 +23,7 @@ html {
 
 .container-media {
   width: 60%;
-  margin-right: 1.5rem;
+  margin: 0 1.5rem;
 }
 
 .container-media img {
@@ -99,7 +99,7 @@ html {
   background-color: #cac7d7;
 }
 .feature h4 {
-  padding: 0.5rem 0;
+  padding: 0.25rem 0;
 }
 
 .feature .more {
@@ -116,6 +116,51 @@ html {
   align-items: center;
 }
 
+@media only screen and (max-width:1170px) {
+  .container h1 {
+    font-size: 1.8rem;
+    line-height: 1.2;
+    font-weight: bold;
+  }
+
+  .container h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .container h3 {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .container h4, p {
+    font-size: .75rem;
+  }
+
+}
+
+@media only screen and (max-width:770px) {
+  .container h1 {
+    font-size: 1.5rem;
+    line-height: 1.2;
+    font-weight: bold;
+  }
+
+  .container h2 {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .container h3 {
+    font-size: 0.85rem;
+    font-weight: bold;
+  }
+
+  .container h4, p {
+    font-size: .75rem;
+  }
+
+}
 /* Header */
 
 header {
@@ -180,7 +225,7 @@ header .mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 770px) {
   header .desktop {
     display: none;
   }
@@ -270,6 +315,16 @@ header .mobile {
   background-color: white;
   color: #383140;
 }
+
+@media only screen and (max-width:1170px) {
+  .button p {
+    font-size: 0.65rem;
+    padding: 0.5rem 2.25rem;
+    background-color: #8a8604;
+    border-radius: 0.5rem;
+    text-transform: uppercase;
+  }
+}
 /* Information */
 
 .information h2 {
@@ -286,6 +341,15 @@ header .mobile {
   color: #8a8604;
 }
 
+@media only screen and (max-width:770px) {
+  .information h2 {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .caption {
+    padding-top: 1rem;
+  }
+}
 /* Courses */
 
 .courses {
@@ -299,7 +363,8 @@ header .mobile {
   display: flex;
   flex-direction: column;
   width: 27%;
-  margin-bottom: 2rem; /*Figure out how to make all courses same height */
+  margin-bottom: 2rem;
+  border-radius: 0.15rem;
 }
 
 .course img {
@@ -358,6 +423,34 @@ header .mobile {
 .course h4 {
   padding: 0.5rem 0;
 }
+
+@media only screen and (max-width:1170px) {
+  .course h3 {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width:970px) {
+  .course-info {
+    margin: 1rem 1.5rem;
+  }
+  .course {
+    margin: 0 0.5rem 1rem 0.5rem;
+  }
+  .course h3 {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width:770px) {
+  .course-info {
+    margin: 0.5rem 1rem;
+  }
+  .course {
+    margin: 0 0.5rem 1rem 0.5rem;
+  }
+}
+/* Thesis */
 
 #thesis {
   display: flex;
