--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -234,6 +234,8 @@ header .mobile {
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 100%;
+    align-items: center;
   }
   header .logo {
     display: none;
@@ -244,6 +246,7 @@ header .mobile {
   }
   header {
     height: auto;
+
   }
   header .content {
     padding: .5rem 0;
@@ -323,6 +326,15 @@ header .mobile {
     background-color: #8a8604;
     border-radius: 0.5rem;
     text-transform: uppercase;
+  }
+}
+
+@media only screen and (max-width:480px) {
+  .banner .container {
+    flex-direction: column;
+  }
+  .banner .container-media {
+    width: 100%;
   }
 }
 /* Information */
