--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,8 +159,13 @@ html {
   .container h4, p {
     font-size: .75rem;
   }
-
 }
+
+@media only screen and (max-width:480px) {
+  .container {
+    padding: 0;
+  }
+
 /* Header */
 
 header {
@@ -234,9 +239,9 @@ header .mobile {
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100%;
     align-items: center;
   }
+
   header .logo {
     display: none;
   }
@@ -332,9 +337,52 @@ header .mobile {
 @media only screen and (max-width:480px) {
   .banner .container {
     flex-direction: column;
+    padding-top: 0;
   }
   .banner .container-media {
     width: 100%;
+  }
+  .banner-text {
+    padding: 2rem 1rem; /*Figure out how to get this to 100% width */
+    width: 95%;
+    max-width: 100%;
+  }
+  .banner h3 {
+    padding: 2rem 0 1.5rem 0;
+  }
+  .container h1 {
+    font-size: 2.85rem;
+    line-height: 1.2;
+    font-weight: bold;
+  }
+
+  .container h2 {
+    font-size: 1.85rem;
+    font-weight: bold;
+  }
+
+  .container h3 {
+    font-size: 1.5rem;
+    font-weight: normal;
+    color: white;
+
+  }
+
+  .container h4, p {
+    font-size: 1rem;
+  }
+
+.button {
+  justify-content: center;
+}
+  .button p {
+    font-size: 1.4rem;
+    padding: 0.5rem 4rem;
+    background-color: #8a8604;
+    border-radius: 0.5rem;
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
   }
 }
 /* Information */
@@ -360,6 +408,30 @@ header .mobile {
   }
   .caption {
     padding-top: 1rem;
+  }
+}
+
+@media only screen and (max-width:480px) {
+  .information .container-media {
+    display: none;
+  }
+
+  .information .features {
+    width: 100%;
+  }
+
+  .information .feature {
+    flex-direction: column;
+  }
+
+  .feature-photo {
+    width: 100%;
+  }
+  .feature-info img {
+    max-width: 100%;
+    max-height: 6rem;
+    padding-left: 1rem;
+    overflow: hidden;
   }
 }
 /* Courses */
